<resources>
    <string name="app_name">JobService</string>
    <string name="network_type_required">Network Type Required</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="requires">Requires</string>
    <string name="device_charging">Device charging</string>
    <string name="device_idle">Device idle</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not Set</string>
    <string name="download">Download Now</string>
    <string name="download_requires">Download Requires:</string>
    <string name="charging">Charging</string>
    <string name="phone_idle">Phone idle</string>
</resources>